--- a/Simulation with Cir Partition.ipynb
+++ b/Simulation with Cir Partition.ipynb
@@ -16,7 +16,8 @@
     "import datetime\n",
     "import copy\n",
     "import pandas as pd\n",
-    "from func_timeout import func_set_timeout"
+    "from func_timeout import func_set_timeout\n",
+    "import func_timeout"
    ]
   },
   {
@@ -180,7 +181,7 @@
    "outputs": [],
    "source": [
     "def get_tdd_of_a_part_circuit(cir,involve_nodes,node_2_index):\n",
-    "    \"\"\"get the TDD of a part circuit\"\"\"\n",
+    "    \"\"\"get the TDD of a part of circuit\"\"\"\n",
     "    tdd=get_identity_tdd()\n",
     "    max_node_num = 0\n",
     "    \n",
@@ -199,10 +200,154 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def circuit_partion1(cir,cx_max,qubits_reorder=False):\n",
+    "    \"\"\"The first partition scheme; \n",
+    "    cx_max is the number of CNOTs allowed to be cut\n",
+    "    \"\"\"\n",
+    "    res=[[[],[]]]\n",
+    "    cx_num=0\n",
+    "    level=0\n",
+    "    \n",
+    "    num_qubit=get_real_qubit_num(cir)\n",
+    "        \n",
+    "    qubits = []    \n",
+    "    qubits.append([k for k in range(num_qubit//2)])\n",
+    "    qubits.append([k for k in range(num_qubit//2,num_qubit)])\n",
+    "\n",
+    "    gates=cir.data\n",
+    "    for k in range(len(gates)):\n",
+    "        g=gates[k]\n",
+    "        q = [q.index for q in g[1]]\n",
+    "        if len(q)==1:\n",
+    "            if q[0] in qubits[0]:\n",
+    "                res[level][0].append(k)\n",
+    "            else:\n",
+    "                res[level][1].append(k)\n",
+    "        elif len(q)==2:\n",
+    "            if q[0] in qubits[0] and q[1] in qubits[0]:\n",
+    "                res[level][0].append(k)\n",
+    "            elif q[0] in qubits[1] and q[1] in qubits[1]:\n",
+    "                res[level][1].append(k)\n",
+    "            else:\n",
+    "                cx_num+=1\n",
+    "                if cx_num<=cx_max:\n",
+    "                    if q[1] in qubits[0]:\n",
+    "                        res[level][0].append(k)\n",
+    "                    else:\n",
+    "                        res[level][1].append(k)\n",
+    "                else:\n",
+    "                    level+=1\n",
+    "                    res.append([])\n",
+    "                    res[level].append([])\n",
+    "                    res[level].append([])\n",
+    "                    if q[1] in qubits[0]:\n",
+    "                        res[level][0].append(k)\n",
+    "                    else:\n",
+    "                        res[level][1].append(k)\n",
+    "                    cx_num=1\n",
+    "        else:\n",
+    "            print(\"Not supported yet!!!\")\n",
+    "            \n",
+    "    print('circuit blocks:',2*(level+1))\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def circuit_partion2(cir,cx_max,c_part_width,qubits_reorder=False):\n",
+    "    \"\"\"The second partition scheme\n",
+    "    cx_max is the number of CNOT that allowed to be cut\n",
+    "    c_part_width is the allowed qubit numbers of the C part;\n",
+    "    \"\"\"\n",
+    "    res=[[[],[],[]]]\n",
+    "    cx_num=0\n",
+    "    level=0\n",
+    "    num_qubit=get_real_qubit_num(cir) \n",
+    "    \n",
+    "    qubits=[]\n",
+    "    qubits.append([k for k in range(num_qubit//2)])\n",
+    "    qubits.append([k for k in range(num_qubit//2,num_qubit)])\n",
+    "    qubits.append([])\n",
+    "    c_range=[num_qubit,0]\n",
+    "    gates=cir.data\n",
+    "    for k in range(len(gates)):\n",
+    "        g=gates[k]\n",
+    "        q = [q.index for q in g[1]]\n",
+    "        if len(q)==1:\n",
+    "            if q[0] in qubits[0]:\n",
+    "                res[level][0].append(k)\n",
+    "            elif q[0] in qubits[1]:\n",
+    "                res[level][1].append(k)\n",
+    "            else:\n",
+    "                res[level][2].append(k)\n",
+    "        elif len(q)==2:\n",
+    "            if q[0] in qubits[0] and q[1] in qubits[0]:\n",
+    "                res[level][0].append(k)\n",
+    "            elif q[0] in qubits[1] and q[1] in qubits[1]:\n",
+    "                res[level][1].append(k)\n",
+    "            elif q[0] in qubits[2] and q[2] in qubits[2]:\n",
+    "                res[level][2].append(k)\n",
+    "            else:\n",
+    "                if cx_num < cx_max:\n",
+    "                    cx_num+=1\n",
+    "                    if q[1] in qubits[0]:\n",
+    "                        res[level][0].append(k)\n",
+    "                    else:\n",
+    "                        res[level][1].append(k)\n",
+    "                else:\n",
+    "                    c_width=max(c_range[1],max(q))-min(c_range[0],min(q))+1\n",
+    "                    if c_width<c_part_width:\n",
+    "                        res[level][2].append(k)\n",
+    "                        c_range[0]=min(c_range[0],min(q))\n",
+    "                        c_range[1]=max(c_range[1],max(q))\n",
+    "                        qubits[0]=[k for k in range(0,c_range[0])]\n",
+    "                        qubits[1]=[k for k in range(c_range[1]+1,num_qubit)]\n",
+    "                        qubits[2]=[k for k in range(c_range[0],c_range[1]+1)]\n",
+    "                    else:\n",
+    "                        level+=1\n",
+    "                        res.append([])\n",
+    "                        res[level].append([])\n",
+    "                        res[level].append([])\n",
+    "                        res[level].append([])\n",
+    "                        qubits.clear()\n",
+    "                        qubits.append([k for k in range(num_qubit//2)])\n",
+    "                        qubits.append([k for k in range(num_qubit//2,num_qubit)])\n",
+    "                        qubits.append([])\n",
+    "                        c_range=[num_qubit,0]\n",
+    "                        if q[0] in qubits[0] and q[1] in qubits[0]:\n",
+    "                            res[level][0].append(k)\n",
+    "                            cx_num=0\n",
+    "                        elif q[0] in qubits[1] and q[1] in qubits[1]:\n",
+    "                            res[level][1].append(k)\n",
+    "                            cx_num=0\n",
+    "                        else:\n",
+    "                            if q[1] in qubits[0]:\n",
+    "                                res[level][0].append(k)\n",
+    "                            else:\n",
+    "                                res[level][1].append(k)\n",
+    "                            cx_num=1\n",
+    "    print('circuit blocks:',3*(level+1))\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "@func_set_timeout(3600)\n",
-    "def Simulation_with_TDD(cir):\n",
+    "def Simulation_with_cir_partion(cir,partion_scheme=0,cx_max=2,c_part_width=2):\n",
     "    \"\"\"Simulate a circuit with TDD;\n",
     "    cir is a qiskit quantum circuit;\n",
+    "    partition_scheme = 0, 1, 2\n",
+    "    cx_max is the number of CNOT that allowed to be cut in two partition scheme\n",
+    "    c_part_width is the allowed qubit numbers of the C part in the second partition scheme;\n",
+    "    return the result tdd and other corresponding information\n",
     "    \"\"\"\n",
     "    max_idx=len(cir.data)\n",
     "    var_order=[]\n",
@@ -217,32 +362,65 @@
     "    Ini_TDD(var_order)\n",
     "    \n",
     "    node_2_index,index_2_node,index_set = get_tensor_index(cir)\n",
-    "\n",
-    "    involve_nodes=list(range(len(cir.data)))\n",
-    "    involve_qubits=list(range(len(cir._qubits)))\n",
-    "    tdd,max_node_num = get_tdd_of_a_part_circuit(cir,involve_nodes,node_2_index)\n",
-    "    return tdd, max_node_num"
+    "    \n",
+    "    max_node_num = 0\n",
+    "    tdd = get_identity_tdd()\n",
+    "    \n",
+    "    if partion_scheme==0:\n",
+    "        involve_nodes=list(range(len(cir.data)))\n",
+    "        tdd,max_node_num = get_tdd_of_a_part_circuit(cir,involve_nodes,node_2_index)\n",
+    "        return tdd, max_node_num\n",
+    "    \n",
+    "    if partion_scheme==1:\n",
+    "        partion_cir=circuit_partion1(cir,cx_max)\n",
+    "        for level in range(len(partion_cir)):\n",
+    "            tdd1,node_num1=get_tdd_of_a_part_circuit(cir,partion_cir[level][0],node_2_index)\n",
+    "            max_node_num = max(max_node_num,node_num1)\n",
+    "            tdd2,node_num2=get_tdd_of_a_part_circuit(cir,partion_cir[level][1],node_2_index)\n",
+    "            max_node_num = max(max_node_num,node_num2)\n",
+    "            temp_tdd=cont(tdd1,tdd2)\n",
+    "            max_node_num = max(max_node_num,temp_tdd.node_number())\n",
+    "            tdd=cont(tdd,temp_tdd)\n",
+    "            max_node_num = max(max_node_num,tdd.node_number())\n",
+    "        return tdd, max_node_num\n",
+    "    \n",
+    "    if partion_scheme==2:\n",
+    "        partion_cir=circuit_partion2(cir,cx_max,c_part_width)\n",
+    "        for level in range(len(partion_cir)):\n",
+    "            tdd1,node_num1=get_tdd_of_a_part_circuit(cir,partion_cir[level][0],node_2_index)\n",
+    "            max_node_num = max(max_node_num,node_num1)\n",
+    "            tdd2,node_num2=get_tdd_of_a_part_circuit(cir,partion_cir[level][1],node_2_index)\n",
+    "            max_node_num = max(max_node_num,node_num2)\n",
+    "            temp_tdd=cont(tdd1,tdd2)\n",
+    "            max_node_num = max(max_node_num,temp_tdd.node_number())\n",
+    "            tdd3,node_num3=get_tdd_of_a_part_circuit(cir,partion_cir[level][2],node_2_index)\n",
+    "            max_node_num = max(max_node_num,node_num3)\n",
+    "            temp_tdd=cont(tdd3,temp_tdd)\n",
+    "            max_node_num = max(max_node_num,temp_tdd.node_number())\n",
+    "            tdd=cont(tdd,temp_tdd)\n",
+    "            max_node_num = max(max_node_num,tdd.node_number())\n",
+    "        return tdd,max_node_num"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Simulation_with_time_out(cir):\n",
+    "def Simulation_with_time_out(cir,partion_scheme=0,cx_max=2,c_part_width=2):\n",
     "    \"\"\"set time out, use the package func_timeout \"\"\"\n",
     "    try:\n",
-    "        return Simulation_with_TDD(cir)\n",
+    "        return Simulation_with_cir_partion(cir, partion_scheme,cx_max,c_part_width)\n",
     "    except:\n",
     "        print('Time out!')\n",
-    "        tdd=get_identity_tdd()\n",
+    "        tdd = get_identity_tdd()\n",
     "        return tdd,0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -270,8 +448,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "circuit: 3_17_13.qasm\n",
+      "qubits: 3\n",
+      "gates number: 36\n",
+      "run_time: 0.06408858299255371\n",
       "max_node_num: 24\n",
-      "run_time: 0.06499910354614258\n",
       "final nodes: 20\n"
      ]
     },
@@ -282,7 +463,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,21 +471,27 @@
    "source": [
     "#Create a circuit and do simulation\n",
     "path='Benchmarks/'\n",
-    "file_name = '3_17_13.qasm'\n",
+    "file_name=\"3_17_13.qasm\"\n",
     "cir=QuantumCircuit.from_qasm_file(path+file_name)\n",
     "\n",
+    "print('circuit:',file_name)\n",
+    "num_qubit=get_real_qubit_num(cir)\n",
+    "print('qubits:',num_qubit)\n",
+    "print('gates number:',get_gates_number(cir))\n",
+    "\n",
     "t_start = time.time()\n",
-    "tdd,max_node_num=Simulation_with_time_out(cir)\n",
+    "tdd,max_node_num=Simulation_with_cir_partion(cir, partion_scheme=0,cx_max=num_qubit//2,c_part_width=num_qubit//2+1)\n",
     "run_time=time.time()-t_start\n",
-    "print('max_node_num:',max_node_num)\n",
     "print('run_time:',run_time)\n",
+    "print('max_node_num:',max_node_num)\n",
     "print('final nodes:',tdd.node_number())\n",
+    "# get_count()\n",
     "TDD_show2(tdd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -316,7 +503,7 @@
     "        \n",
     "# for file in file_list.readlines():\n",
     "#     file_name=file[:-1]\n",
-    "        \n",
+    "\n",
     "#     print(file_name)\n",
     "#     cir=QuantumCircuit.from_qasm_file(path+file_name)\n",
     "\n",
@@ -329,9 +516,10 @@
     "#     data.append(file_name)\n",
     "#     data.append(num_qubit)\n",
     "#     data.append(gate_num)\n",
-    "\n",
+    "#     time_now = datetime.datetime.now()\n",
+    "#     print(time_now.strftime('%m.%d-%H:%M:%S'))\n",
     "#     t_start = time.time()\n",
-    "#     tdd,node_num=Simulation_with_time_out(cir)\n",
+    "#     tdd,node_num=Simulation_with_time_out(cir,partion_scheme=0,cx_max=num_qubit//2)\n",
     "#     run_time=time.time()-t_start\n",
     "#     tdd_nodes = tdd.node_number()\n",
     "#     print(run_time)\n",
@@ -348,6 +536,13 @@
     "#     df.to_excel(excel_path, index=False, header=False)\n",
     "# file_list.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
